<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MasukActivity"
    android:background="#E06F6C">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_aplikasi"
            android:contentDescription="@string/logo_aplikasi"
            android:layout_margin="40dp"/>

        <ProgressBar
            android:id="@+id/bilah_kemajuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boks_masukan"
            android:padding="15dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/masuk_nisn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_nisn"
                android:inputType="number"
                android:maxLines="1"
                android:drawableStart="@drawable/ikon_pengguna"
                android:drawablePadding="10dp"
                android:background="@color/transparan"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boks_masukan"
            android:padding="15dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/masuk_kata_sandi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_kata_sandi"
                android:inputType="textPassword"
                android:maxLines="1"
                android:drawableStart="@drawable/ikon_gembok"
                android:drawablePadding="10dp"
                android:background="@color/transparan"/>

        </LinearLayout>

        <Button
            android:id="@+id/tombol_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="17dp"
            android:text="@string/masuk"
            android:textColor="@color/putih"
            android:textStyle="bold"
            android:textSize="15sp"
            android:background="@drawable/tombol_utama"/>

    </LinearLayout>

</ScrollView>