<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.upi.bahasaindonesia.kem.BerandaFragment"
    android:background="@color/putih">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tombol_informasi"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="30dp"
                android:background="@drawable/tombol_informasi"
                tools:ignore="UselessParent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/informasi"
                    android:textColor="@color/putih"
                    android:textSize="40sp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ikon_informasi"
                    android:contentDescription="@string/ikon_informasi" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tombol_petunjuk"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="30dp"
                android:background="@drawable/tombol_petunjuk"
                tools:ignore="UselessParent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/petunjuk"
                    android:textColor="@color/putih"
                    android:textSize="40sp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ikon_petunjuk"
                    android:contentDescription="@string/ikon_petunjuk" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tombol_latihan"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="30dp"
                android:background="@drawable/tombol_latihan"
                tools:ignore="UselessParent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latihan"
                    android:textColor="@color/putih"
                    android:textSize="40sp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ikon_latihan"
                    android:contentDescription="@string/ikon_petunjuk" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tombol_grafik"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="30dp"
                android:background="@drawable/tombol_grafik"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grafik"
                    android:textColor="@color/putih"
                    android:textSize="40sp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ikon_grafik"
                    android:contentDescription="@string/ikon_petunjuk" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
