<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.upi.bahasaindonesia.kem.BerandaActivity"
    tools:showIn="@layout/app_bar_drawer_navigation">

    <!--<include
        layout="@layout/activity_beranda"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />-->

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:gravity="center">

                <!--<ImageButton
                    android:id="@+id/tombol_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ikon_menu"
                    android:background="@color/transparan"
                    android:contentDescription="@string/menu" />-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/beranda"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/hitam"
                    android:textSize="24sp"
                    android:layout_marginEnd="30dp"/>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tombol_informasi"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="30dp"
                android:background="@drawable/tombol_informasi"
                tools:ignore="UselessParent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/informasi"
                    android:textColor="@color/putih"
                    android:textSize="40sp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ikon_informasi"
                    android:contentDescription="@string/ikon_informasi" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tombol_petunjuk"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="30dp"
                android:background="@drawable/tombol_petunjuk"
                tools:ignore="UselessParent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/petunjuk"
                    android:textColor="@color/putih"
                    android:textSize="40sp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ikon_petunjuk"
                    android:contentDescription="@string/ikon_petunjuk" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tombol_latihan"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="30dp"
                android:background="@drawable/tombol_latihan"
                tools:ignore="UselessParent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latihan"
                    android:textColor="@color/putih"
                    android:textSize="40sp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ikon_latihan"
                    android:contentDescription="@string/ikon_petunjuk" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tombol_grafik"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="start|center"
                android:orientation="horizontal"
                android:padding="30dp"
                android:background="@drawable/tombol_grafik"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grafik"
                    android:textColor="@color/putih"
                    android:textSize="40sp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ikon_grafik"
                    android:contentDescription="@string/ikon_petunjuk" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
